# ReCamera_Samples

./: README.md  deploy_sscma_node.sh  start_custom_node.sh  stop_all.sh
solutions/device/: CMakeLists-dependencies.txt  CMakeLists.txt
solutions/device/main/: ma_config.h  main.cpp
solutions/sscma-node/: CMakeLists.txt  flow.json  flow_test.json  postinst  version.h
solutions/sscma-node/main/: CMakeLists.txt  flash_config.cpp  flash_config.h  main.cpp
solutions/sscma-node/main/node/: FlowConfigReader.h  ai_config.cpp  ai_config.h  ai_model_processor.cpp  ai_model_processor.h  barcode_decoder_zx.cpp  barcode_decoder_zx.h  camera.cpp  camera.h  capture_flag.cpp  capture_flag.h  crop_config.h  datamatrix_config.h  flash_config.cpp  flash_config.h  frame_utils.cpp  frame_utils.h  image_preprocessor.cpp  image_preprocessor.h  image_utils.cpp  image_utils.h  label_mapper.cpp  label_mapper.h  led.cpp  led.h  model.cpp  preprocessor_config.cpp  preprocessor_config.h  profiler.h  reCamera.code-workspace  server.cpp  white_balance_config.cpp  white_balance_config.h
solutions/sscma-node/main/node/config/: ai_config.cpp  ai_config.h  barcode_config.cpp  barcode_config.h  crop_config.cpp  datamatrix_config.cpp  flash_config.cpp  preprocessor_config.cpp  preprocessor_config.h  white_balance_config.cpp  white_balance_config.h
